--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -34,4 +34,4 @@
  - метрики команд (информация о последней дате выполнения регламентного задания команды и время выполнения команды (метрика с добавлением префикса ***<ИмяПланаОбмена.КодУзла.>***)). 
 Адрес до страницы визуализации Grafana указывается в реквизите DashBoardURL узла шины обмена.
 
-![Мониторинг](images/Њониторинг.png)
+![Мониторинг](images/Мониторинг.png)
