--- a/Подсистема обслуживания данных (dsm)/Общее.md
+++ b/Подсистема обслуживания данных (dsm)/Общее.md
@@ -1,4 +1,4 @@
-# Џодсистема обслуживания данных
+# Подсистема обслуживания данных
 
 ![XDTO обмен](images/XDTOОбмен.png)
 
@@ -16,7 +16,7 @@
 
 ![Связи пакетов](images/СвязиПакетов.png)
 
-- **Ключ изменениЯ** - элемент справочника, служащий для связки журнала обмена и данных о пакете обмена. Ключи изменения связаны через РС ***Связи пакетов обмена***. Эта связь образуется при обработке пакета-источника см. изображения выше.
+- **Ключ изменения** - элемент справочника, служащий для связки журнала обмена и данных о пакете обмена. Ключи изменения связаны через РС ***Связи пакетов обмена***. Эта связь образуется при обработке пакета-источника см. изображения выше.
 - **Сообщение обмена** - единица обмена между базами. Является набором сериализованных данных, разложенных по именам типов. 
 - **Монитор шины обмена** - одно кольцо, чтоб править всеми.
 
