Update Узлы плана обмена.md

--- a/Подсистема обслуживания данных (dsm)/Узлы плана обмена.md
+++ b/Подсистема обслуживания данных (dsm)/Узлы плана обмена.md
@@ -1,19 +1,18 @@
-# “злы плана обмена
+# РЈР·Р»С‹ РїР»Р°РЅР° РѕР±РјРµРЅР°
 
-“злы планов обмена служат длЯ обособлениЯ команд и их операций. “злы используют рЯд общих настроек, введЮнных длЯ плана обмена. 
-‘ помощью детальных настроек узла описываютсЯ параметры регистрации объекта в узел, разрешенные разработчиком, правила передачи и получениЯ операций, оповещение ответственных за нарушениЯ при обработке данных (см. подсистема расширенных настроек). 
-‚ рамках узла создаютсЯ команды и их настройки подключениЯ к удаленной системе.
+РЈР·Р»С‹ РїР»Р°РЅРѕРІ РѕР±РјРµРЅР° СЃР»СѓР¶Р°С‚ РґР»СЏ РѕР±РѕСЃРѕР±Р»РµРЅРёСЏ РєРѕРјР°РЅРґ Рё РёС… РѕРїРµСЂР°С†РёР№. РЈР·Р»С‹ РёСЃРїРѕР»СЊР·СѓСЋС‚ СЂСЏРґ РѕР±С‰РёС… РЅР°СЃС‚СЂРѕРµРє, РІРІРµРґРµРЅРЅС‹С… РґР»СЏ РїР»Р°РЅР° РѕР±РјРµРЅР°. 
+СЃ РїРѕРјРѕС‰СЊСЋ РґРµС‚Р°Р»СЊРЅС‹С… РЅР°СЃС‚СЂРѕРµРє СѓР·Р»Р° РѕРїРёСЃС‹РІР°СЋС‚СЃСЏ РїР°СЂР°РјРµС‚СЂС‹ СЂРµРіРёСЃС‚СЂР°С†РёРё РѕР±СЉРµРєС‚Р° РІ СѓР·РµР», СЂР°Р·СЂРµС€РµРЅРЅС‹Рµ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРѕРј, РїСЂР°РІРёР»Р° РїРµСЂРµРґР°С‡Рё Рё РїРѕР»СѓС‡РµРЅРёСЏ РѕРїРµСЂР°С†РёР№, РѕРїРѕРІРµС‰РµРЅРёРµ РѕС‚РІРµС‚СЃС‚РІРµРЅРЅС‹С… Р·Р° РЅР°СЂСѓС€РµРЅРёСЏ РїСЂРё РѕР±СЂР°Р±РѕС‚РєРµ РґР°РЅРЅС‹С… (СЃРј. РїРѕРґСЃРёСЃС‚РµРјР° СЂР°СЃС€РёСЂРµРЅРЅС‹С… РЅР°СЃС‚СЂРѕРµРє). Р’ СЂР°РјРєР°С… СѓР·Р»Р° СЃРѕР·РґР°СЋС‚СЃСЏ РєРѕРјР°РЅРґС‹ Рё РёС… РЅР°СЃС‚СЂРѕР№РєРё РїРѕРґРєР»СЋС‡РµРЅРёСЏ Рє СѓРґР°Р»РµРЅРЅРѕР№ СЃРёСЃС‚РµРјРµ.
  
-![Ќастройки плана обмена](images/ЌастройкиЏланаЋбмена.png)
-![Ќастройка обмена](images/Ќастройка“зла_1.png)
-![Ќастройка обмена](images/Ќастройка“зла_2.png) 
+![РќР°СЃС‚СЂРѕР№РєРё РїР»Р°РЅР° РѕР±РјРµРЅР°](images/РќР°СЃС‚СЂРѕР№РєРёРџР»Р°РЅР°РћР±РјРµРЅР°.png)
+![РќР°СЃС‚СЂРѕР№РєР° РѕР±РјРµРЅР° 1](images/РќР°СЃС‚СЂРѕР№РєР°РЈР·Р»Р°_1.png)
+![РќР°СЃС‚СЂРѕР№РєР° РѕР±РјРµРЅР° 2](images/РќР°СЃС‚СЂРѕР№РєР°РЈР·Р»Р°_2.png) 
  
-Џравила передачи и получениЯ данных длЯ выполнениЯ задаютсЯ длЯ каждой операции с помощью разрешениЯ и правила проверки данных. ђазрешениЯ могут иметь следующие значениЯ:
-- **‡апрет**. „аннаЯ операциЯ не обрабатываетсЯ этим узлом. ‚ журнале операции не делаетсЯ запись.
-- **‡апрет повтора**. ‡апрещает обработку ранее полученного пакета. ‚ журнал операции записываетсЯ информациЯ о некорректной операции.
-- **‡апрет повтора подрЯд по объекту €Ѓ**. ‡апрещает обработку, при получении данных подрЯд. ‚ журнал операции записываетсЯ информациЯ о некорректной операции.
-- **Џолное разрешение**. Ќикаких ограничений.
-- **Ћднократно по объекту €Ѓ**. 
+РџСЂР°РІРёР»Р° РїРµСЂРµРґР°С‡Рё Рё РїРѕР»СѓС‡РµРЅРёСЏ РґР°РЅРЅС‹С… РґР»СЏ РІС‹РїРѕР»РЅРµРЅРёРЇ Р·Р°РґР°СЋС‚СЃСЏ РґР»СЏ РєР°Р¶РґРѕР№ РѕРїРµСЂР°С†РёРё СЃ РїРѕРјРѕС‰СЊСЋ СЂР°Р·СЂРµС€РµРЅРёСЏ Рё РїСЂР°РІРёР»Р° РїСЂРѕРІРµСЂРєРё РґР°РЅРЅС‹С…. СЂР°Р·СЂРµС€РµРЅРёСЏ РјРѕРіСѓС‚ РёРјРµС‚СЊ СЃР»РµРґСѓСЋС‰РёРµ Р·РЅР°С‡РµРЅРёСЏ:
+- **Р—Р°РїСЂРµС‚**. Р”Р°РЅРЅР°СЏ РѕРїРµСЂР°С†РёСЏ РЅРµ РѕР±СЂР°Р±Р°С‚С‹РІР°РµС‚СЃСЏ СЌС‚РёРј СѓР·Р»РѕРјвЂљ Р¶СѓСЂРЅР°Р»Рµ РѕРїРµСЂР°С†РёРё РЅРµ РґРµР»Р°РµС‚СЃСЏ Р·Р°РїРёСЃСЊ.
+- **Р—Р°РїСЂРµС‚ РїРѕРІС‚РѕСЂР°**. Р—Р°РїСЂРµС‰Р°РµС‚ РѕР±СЂР°Р±РѕС‚РєСѓ СЂР°РЅРµРµ РїРѕР»СѓС‡РµРЅРЅРѕРіРѕ РїР°РєРµС‚Р°вЂљ Р¶СѓСЂРЅР°Р» РѕРїРµСЂР°С†РёРё Р·Р°РїРёСЃС‹РІР°РµС‚СЃСЏ РёРЅС„РѕСЂРјР°С†РёСЏ Рѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕР№ РѕРїРµСЂР°С†РёРё.
+- **Р—Р°РїСЂРµС‚ РїРѕРІС‚РѕСЂР° РїРѕРґСЂРЇРґ РїРѕ РѕР±СЉРµРєС‚Сѓ РР‘**. Р—Р°РїСЂРµС‰Р°РµС‚ РѕР±СЂР°Р±РѕС‚РєСѓ, РїСЂРё РїРѕР»СѓС‡РµРЅРёРё РґР°РЅРЅС‹С… РїРѕРґСЂСЏРґвЂљ Р¶СѓСЂРЅР°Р» РѕРїРµСЂР°С†РёРё Р·Р°РїРёСЃС‹РІР°РµС‚СЃСЏ РёРЅС„РѕСЂРјР°С†РёСЏ Рѕ РЅРµРєРѕСЂСЂРµРєС‚РЅРѕР№ РѕРїРµСЂР°С†РёРё.
+- **РџРѕР»РЅРѕРµ СЂР°Р·СЂРµС€РµРЅРёРµ**. РќРёРєР°РєРёС… РѕРіСЂР°РЅРёС‡РµРЅРёР№.
+- **РћРґРЅРѕРєСЂР°С‚РЅРѕ РїРѕ РѕР±СЉРµРєС‚Сѓ РР‘**. 
 
 
 
