--- a/Подсистема обслуживания данных (dsm)/Команды.md
+++ b/Подсистема обслуживания данных (dsm)/Команды.md
@@ -1,15 +1,15 @@
-# Љоманды
+# РљРѕРјР°РЅРґС‹
 
-‘правочник команд служит длЯ организации выполнениЯ операций по получению, передаче, обработке данных. 
+РЎРїСЂР°РІРѕС‡РЅРёРє РєРѕРјР°РЅРґ СЃР»СѓР¶РёС‚ РґР»СЏ РѕСЂРіР°РЅРёР·Р°С†РёРё РІС‹РїРѕР»РЅРµРЅРёСЏ РѕРїРµСЂР°С†РёР№ РїРѕ РїРѕР»СѓС‡РµРЅРёСЋ, РїРµСЂРµРґР°С‡Рµ, РѕР±СЂР°Р±РѕС‚РєРµ РґР°РЅРЅС‹С…. 
  
-![Љоманда](images/Љоманды.png)
+![РљРѕРјР°РЅРґР°](images/РљРѕРјР°РЅРґС‹.png)
  
-Ќастройка автоматического выполнениЯ (создание регламентного заданиЯ) команды производитсЯ на вкладке “правление заданием расписаниЯ и записью элемента. 
-Џиктограммы отвечает за запуск/остановку автоматического выполнениЯ (использование/неиспользование регламентного заданиЯ). 
-„лЯ удалениЯ регламентного заданиЯ необходимо пометить на удаление команду.
-ЋграничениЯ служат длЯ указаниЯ обрабатываемых этой командой метаданных. Ћтсутствие ограничений означает обработку всех метаданных.
- 
-ђучное выполнение команд ины обмена при необходимости осуществлЯетсЯ из Њонитора ины обмена (см. раздел Њонитор ины Ћбмена) или из объектов информационной базы, участвующих в синхронизации по ине обмена, через команды навигационной панели.
+РќР°СЃС‚СЂРѕР№РєР° Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРіРѕ РІС‹РїРѕР»РЅРµРЅРёРЇ (СЃРѕР·РґР°РЅРёРµ СЂРµРіР»Р°РјРµРЅС‚РЅРѕРіРѕ Р·Р°РґР°РЅРёРЇ) РєРѕРјР°РЅРґС‹ РїСЂРѕРёР·РІРѕРґРёС‚СЃСЏ РЅР° РІРєР»Р°РґРєРµ РЈРїСЂР°РІР»РµРЅРёРµ Р·Р°РґР°РЅРёРµРј СЂР°СЃРїРёСЃР°РЅРёСЏ Рё Р·Р°РїРёСЃСЊСЋ СЌР»РµРјРµРЅС‚Р°. 
+РџРёРєС‚РѕРіСЂР°РјРјС‹ РѕС‚РІРµС‡Р°РµС‚ Р·Р° Р·Р°РїСѓСЃРє/РѕСЃС‚Р°РЅРѕРІРєСѓ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРѕРіРѕ РІС‹РїРѕР»РЅРµРЅРёСЏ (РёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ/РЅРµРёСЃРїРѕР»СЊР·РѕРІР°РЅРёРµ СЂРµРіР»Р°РјРµРЅС‚РЅРѕРіРѕ Р·Р°РґР°РЅРёРЇ). 
+Р”Р»РЇ СѓРґР°Р»РµРЅРёСЏ СЂРµРіР»Р°РјРµРЅС‚РЅРѕРіРѕ Р·Р°РґР°РЅРёСЏ РЅРµРѕР±С…РѕРґРёРјРѕ РїРѕРјРµС‚РёС‚СЊ РЅР° СѓРґР°Р»РµРЅРёРµ РєРѕРјР°РЅРґСѓ.
+РћРіСЂР°РЅРёС‡РµРЅРёСЏ СЃР»СѓР¶Р°С‚ РґР»СЏ СѓРєР°Р·Р°РЅРёСЏ РѕР±СЂР°Р±Р°С‚С‹РІР°РµРјС‹С… СЌС‚РѕР№ РєРѕРјР°РЅРґРѕР№ РјРµС‚Р°РґР°РЅРЅС‹С…. РћС‚СЃСѓС‚СЃС‚РІРёРµ РѕРіСЂР°РЅРёС‡РµРЅРёР№ РѕР·РЅР°С‡Р°РµС‚ РѕР±СЂР°Р±РѕС‚РєСѓ РІСЃРµС… РјРµС‚Р°РґР°РЅРЅС‹С…. 
+
+Р СѓС‡РЅРѕРµ РІС‹РїРѕР»РЅРµРЅРёРµ РєРѕРјР°РЅРґ РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РїСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РѕСЃСѓС‰РµСЃС‚РІР»СЏРµС‚СЃСЏ РёР· РњРѕРЅРёС‚РѕСЂР° РѕР±СЃР»СѓР¶РёРІР°РЅРёСЏ РёР»Рё РёР· РѕР±СЉРµРєС‚РѕРІ РёРЅС„РѕСЂРјР°С†РёРѕРЅРЅРѕР№ Р±Р°Р·С‹, СѓС‡Р°СЃС‚РІСѓСЋС‰РёС… РІ СЃРёРЅС…СЂРѕРЅРёР·Р°С†РёРё, С‡РµСЂРµР· РєРѕРјР°РЅРґС‹ РЅР°РІРёРіР°С†РёРѕРЅРЅРѕР№ РїР°РЅРµР»Рё.
 
 
 
