--- a/Подсистема обслуживания данных (dsm)/Команды.md
+++ b/Подсистема обслуживания данных (dsm)/Команды.md
@@ -5,7 +5,7 @@
 ![Команда](images/Команды.png)
  
 Настройка автоматического выполнениЯ (создание регламентного задания) команды производится на вкладке Управление заданием расписания и записью элемента. 
-Пиктограммы отвечает за запуск/остановку автоматического выполнения (использование/неиспользование регламентного заданиЯ). 
+Пиктограммы отвечает за запуск/остановку автоматического выполнения (использование/неиспользование регламентного задания). 
 Для удаления регламентного задания необходимо пометить на удаление команду.
 Ограничения служат для указания обрабатываемых этой командой метаданных. Отсутствие ограничений означает обработку всех метаданных. 
 
