Update Порядок встраивания подсистемы.md

--- a/Подсистема обслуживания данных (dsm)/Порядок встраивания подсистемы.md
+++ b/Подсистема обслуживания данных (dsm)/Порядок встраивания подсистемы.md
@@ -1,31 +1,26 @@
-# ЏорЯдок интеграции подсистемы в конфигурацию
+# РџРѕСЂСЏРґРѕРє РёРЅС‚РµРіСЂР°С†РёРё РїРѕРґСЃРёСЃС‚РµРјС‹ РІ РєРѕРЅС„РёРіСѓСЂР°С†РёСЋ
 
-1.	‘равнение-объединение по подсистеме ЗЃазоваЯ”ункциональностьИ. “бедитьсЯ, что подсистема верхнего уровнЯ захвачена или отсутствует.
-2.	‘оздать новый план обмена с минимальным набором реквизитов: Ћтключить, ђежим‚ыгрузки„окументов, ђежим‚ыгрузкиЏриЌеобходимости, ђежим‚ыгрузки‘правочников, DashBoardURL, табличных частей: ЋтветственныеЏользователи, Ќастройки‚ыгрузки, Ќастройки‡агрузки, макетов: ЊакетЋповещениЯ, Њакет‘верки. Ћтредактировать состав, авто регистрациЯ запрещена (обЯзательно добавить регистр сведений †урналЋпераций).
+1.	РЎСЂР°РІРЅРµРЅРёРµ-РѕР±СЉРµРґРёРЅРµРЅРёРµ РїРѕ РїРѕРґСЃРёСЃС‚РµРјРµ Р‘Р°Р·РѕРІР°СЏР¤СѓРЅРєС†РёРѕРЅР°Р»СЊРЅРѕСЃС‚СЊ Рё СѓР±РµРґРёС‚СЊСЃРЇ, С‡С‚Рѕ РїРѕРґСЃРёСЃС‚РµРјР° РІРµСЂС…РЅРµРіРѕ СѓСЂРѕРІРЅРЇ Р·Р°С…РІР°С‡РµРЅР° РёР»Рё РѕС‚СЃСѓС‚СЃС‚РІСѓРµС‚.
+2.	РЎРѕР·РґР°С‚СЊ РЅРѕРІС‹Р№ РїР»Р°РЅ РѕР±РјРµРЅР° СЃ РјРёРЅРёРјР°Р»СЊРЅС‹Рј РЅР°Р±РѕСЂРѕРј СЂРµРєРІРёР·РёС‚РѕРІ: Р‹С‚РєР»СЋС‡РёС‚СЊ, Р РµР¶РёРјР’С‹РіСЂСѓР·РєРёвЂћРѕРєСѓРјРµРЅС‚РѕРІ, Р РµР¶РёРјР’С‹РіСЂСѓР·РєРёРЏСЂРёРЊРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё, Р РµР¶РёРјР’С‹РіСЂСѓР·РєРёРЎРїСЂР°РІРѕС‡РЅРёРєРѕРІ, DashBoardURL, С‚Р°Р±Р»РёС‡РЅС‹С… С‡Р°СЃС‚РµР№: РћС‚РІРµС‚СЃС‚РІРµРЅРЅС‹РµРџРѕР»СЊР·РѕРІР°С‚РµР»Рё, РќР°СЃС‚СЂРѕР№РєРёР’С‹РіСЂСѓР·РєРё, РќР°СЃС‚СЂРѕР№РєРёР—Р°РіСЂСѓР·РєРё, РјР°РєРµС‚РѕРІ: РњР°РєРµС‚Р‹РїРѕРІРµС‰РµРЅРёСЏ. РћС‚СЂРµРґР°РєС‚РёСЂРѕРІР°С‚СЊ СЃРѕСЃС‚Р°РІ, Р°РІС‚Рѕ СЂРµРіРёСЃС‚СЂР°С†РёСЏ Р·Р°РїСЂРµС‰РµРЅР° (РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ РґРѕР±Р°РІРёС‚СЊ СЂРµРіРёСЃС‚СЂ СЃРІРµРґРµРЅРёР№ Р–СѓСЂРЅР°Р»РћРїРµСЂР°С†РёР№).
 
-![Њетаданные плана обмена](images/ЊетаданныеЏланаЋбмена.png)
+![РЉРµС‚Р°РґР°РЅРЅС‹Рµ РїР»Р°РЅР° РѕР±РјРµРЅР°](images/РњРµС‚Р°РґР°РЅРЅС‹РµРџР»Р°РЅР°РћР±РјРµРЅР°.png)
 
-3.	Ћтредактировать определЯемые типы: ‘инхронизируемыеЋбъекты, “злыиныЋбменаЊЂ								   
-4.	„обавить обработки сериализации/десериализации 
+3.	РћС‚СЂРµРґР°РєС‚РёСЂРѕРІР°С‚СЊ РѕРїСЂРµРґРµР»СЏРµРјС‹Рµ С‚РёРїС‹: РЎРёРЅС…СЂРѕРЅРёР·РёСЂСѓРµРјС‹РµРћР±СЉРµРєС‚С‹, РЈР·Р»С‹ВРћР±РјРµРЅР°							   
+4.	Р”РѕР±Р°РІРёС‚СЊ РѕР±СЂР°Р±РѕС‚РєРё СЃРµСЂРёР°Р»РёР·Р°С†РёРё/РґРµСЃРµСЂРёР°Р»РёР·Р°С†РёРё 
+    - СЃРѕР·РґР°РЅРёРµ РѕР±СЂР°Р±РѕС‚РєРё СЃРµСЂРёР°Р»РёР·Р°С†РёРё XDTO
+    - СЃРѕР·РґР°РЅРёРµ РѕР±СЂР°Р±РѕС‚РєРё РґРµСЃРµСЂРёР°Р»РёР·Р°С†РёРё XDTO
+    - СЃРѕР·РґР°РЅРёРµ РѕР±СЂР°Р±РѕС‚РєРё РїСЂРѕРёР·РІРѕР»СЊРЅРѕР№ СЃРµСЂРёР°Р»РёР·Р°С†РёРё
+    - СЃРѕР·РґР°РЅРёРµ РѕР±СЂР°Р±РѕС‚РєРё РїСЂРѕРёР·РІРѕР»СЊРЅРѕР№ РґРµСЃРµСЂРёР°Р»РёР·Р°С†РёРё
+5.	Р”РѕР±Р°РІРёС‚СЊ РјРѕРґРµР»Рё XDTO. РґРѕР±Р°РІРёС‚СЊ РІ РєР°Р¶РґСѓСЋ РјРѕРґРµР»СЊ РѕР±СЉРµРєС‚-РєРѕР»Р»РµРєС†РёСЋ XDTO РґР»РЇ РІСЃРµС… РІРѕР·РјРѕР¶РЅС‹С… РІС‹РіСЂСѓР¶Р°РµРјС‹С… С‚РёРїРѕРІ РґР°РЅРЅС‹С…. РІС‹РіСЂСѓР¶Р°РµРјС‹Рµ РѕР±СЉРµРєС‚С‹ XDTO РґРѕР»Р¶РЅС‹ РЅР°СЃР»РµРґРѕРІР°С‚СЊСЃРЇ РѕС‚ С‚РёРїР° Object, РёС… РєР»СЋС‡Рё РѕС‚ С‚РёРїР° Ref РёР· РњРѕРґРµР»Рё XDTO MABusExchangeCommon.
+6.	Р’РЅРµСЃС‚Рё РёР·РјРµРЅРµРЅРёСЏ РІ РЉРѕРґРµР»СЊ XDTO MABusExchangeMessage, РґРѕР±Р°РІРёРІ РѕР±СЉРµРєС‚С‹-РєРѕР»Р»РµРєС†РёРё XDTO РёР· РєР°Р¶РґРѕР№ РґРѕР±Р°РІР»РµРЅРЅРѕР№ РІ Рї.5 РјРѕРґРµР»Рё РІ РєРѕРЅС‚РµР№РЅРµСЂ.
 
-- создание обработки сериализации XDTO
-
-- создание обработки десериализации XDTO
-
-- создание обработки произвольной сериализации
-
-- создание обработки произвольной десериализации
-
-5.	„обавить Њодели XDTO. „обавить в каждую модель объект-коллекцию XDTO длЯ всех возможных выгружаемых типов данных. ‚ыгружаемые объекты XDTO должны наследоватьсЯ от типа Object, их ключи от типа Ref из Њодели XDTO MABusExchangeCommon.
-6.	‚нести изменениЯ в Њодель XDTO MABusExchangeMessage, добавив объекты-коллекции XDTO из каждой добавленной в п.5 модели в контейнер.
-
-![Љонтейнер XDTO](images/ЉонтейнерXDTO.png)
+![РљРѕРЅС‚РµР№РЅРµСЂ XDTO](images/РљРѕРЅС‚РµР№РЅРµСЂXDTO.png)
  
-7.	€зменить функции модулЯ менеджера Џлана Ћбмена: €мЯ’аблицыЏланаЋбмена, ЏолучитьЊенеджерЋбработчикаЋтправки, ЏолучитьЊенеджерЋбработчикаЏолучениЯ, Џространство€мен‚ыгрузки, Џространство€мен‡агрузки, ЉоллекцииXDTO_‚ыгрузка, ЉоллекцииXDTO_‡агрузка в соответствии с добавленными в п. 4, 5 метаданными. Џри необходимости изменить процедуры формированиЯ макетов длЯ оповещениЯ, сверки.
-8.	„обавить подписки на событиЯ Ћбъектов, указанных в составе плана обмена, за исключением регистров сведений †урналЋпераций и ‘оответствиЯЋбъектов€нформационныхЃаз.
-9.	„обавить в расширение З€нтеграционныеЊодулииныЋбменаЊЂИ объекты состава узла. ‚ их модулЯх менеджера описать функции получениЯ данных длЯ сериализации. ЋбЯзательные данные €Ѓ длЯ ссылочных типов: ‘сылка, Џредставление, €мЯЏредопределенных„анных (длЯ идентификации по ЏЉ‡).
-10.	‚нести изменениЯ в функцию получениЯ расшифровки ЏолучитьЋписаниеЏредставлениЯЋбъектаXDTO модулЯ инаЋбменаЊЂЏовт€сп, в функцию получениЯ данных Џолучить„анные€Ѓ_ђасширЯемый, длЯ нестандартных команд в функцию ‚ыполнитьЉомандуиныЋбменаЊЂ_ђасширЯемый модулЯ инаЋбменаЊЂЏереопределЯемый.
-11.	Ћтредактировать роль чг_ЃазовыеЏраваиныЋбменаЊЂ.
-12.	‘оздать правила регистрации
+7.	РР·РјРµРЅРёС‚СЊ С„СѓРЅРєС†РёРё РјРѕРґСѓР»СЏ РјРµРЅРµРґР¶РµСЂР° РЏР»Р°РЅР° Р‹Р±РјРµРЅР°: в‚¬РјРЇвЂ™Р°Р±Р»РёС†С‹РЏР»Р°РЅР°Р‹Р±РјРµРЅР°, РЏРѕР»СѓС‡РёС‚СЊРЉРµРЅРµРґР¶РµСЂР‹Р±СЂР°Р±РѕС‚С‡РёРєР°Р‹С‚РїСЂР°РІРєРё, РЏРѕР»СѓС‡РёС‚СЊРЉРµРЅРµРґР¶РµСЂР‹Р±СЂР°Р±РѕС‚С‡РёРєР°РЏРѕР»СѓС‡РµРЅРёРЇ, РЏСЂРѕСЃС‚СЂР°РЅСЃС‚РІРѕв‚¬РјРµРЅвЂљС‹РіСЂСѓР·РєРё, РџСЂРѕСЃС‚СЂР°РЅСЃС‚РІРѕв‚¬РјРµРЅР—Р°РіСЂСѓР·РєРё, РљРѕР»Р»РµРєС†РёРёXDTO_вЂљС‹РіСЂСѓР·РєР°, Р‰РѕР»Р»РµРєС†РёРёXDTO_вЂЎР°РіСЂСѓР·РєР° РІ СЃРѕРѕС‚РІРµС‚СЃС‚РІРёРё СЃ РґРѕР±Р°РІР»РµРЅРЅС‹РјРё РІ Рї. 4, 5 РјРµС‚Р°РґР°РЅРЅС‹РјРё. РЏСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РёР·РјРµРЅРёС‚СЊ РїСЂРѕС†РµРґСѓСЂС‹ С„РѕСЂРјРёСЂРѕРІР°РЅРёРЇ РјР°РєРµС‚РѕРІ РґР»РЇ РѕРїРѕРІРµС‰РµРЅРёРЇ, СЃРІРµСЂРєРё.
+8.	Р”РѕР±Р°РІРёС‚СЊ РїРѕРґРїРёСЃРєРё РЅР° СЃРѕР±С‹С‚РёРЇ Р‹Р±СЉРµРєС‚РѕРІ, СѓРєР°Р·Р°РЅРЅС‹С… РІ СЃРѕСЃС‚Р°РІРµ РїР»Р°РЅР° РѕР±РјРµРЅР°, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј СЂРµРіРёСЃС‚СЂРѕРІ СЃРІРµРґРµРЅРёР№ вЂ СѓСЂРЅР°Р»Р‹РїРµСЂР°С†РёР№ Рё вЂРѕРѕС‚РІРµС‚СЃС‚РІРёРЇР‹Р±СЉРµРєС‚РѕРІв‚¬РЅС„РѕСЂРјР°С†РёРѕРЅРЅС‹С…РѓР°Р·.
+9.	Р”РѕР±Р°РІРёС‚СЊ РІ СЂР°СЃС€РёСЂРµРЅРёРµ РРЅС‚РµРіСЂР°С†РёРѕРЅРЅС‹РµРњРѕРґСѓР»РёВ РѕР±СЉРµРєС‚С‹ СЃРѕСЃС‚Р°РІР° СѓР·Р»Р°вЂљ РёС… РјРѕРґСѓР»СЏС… РјРµРЅРµРґР¶РµСЂР° РѕРїРёСЃР°С‚СЊ С„СѓРЅРєС†РёРё РїРѕР»СѓС‡РµРЅРёРЇ РґР°РЅРЅС‹С… РґР»РЇ СЃРµСЂРёР°Р»РёР·Р°С†РёРё. Р‹Р±РЇР·Р°С‚РµР»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ в‚¬Рѓ РґР»РЇ СЃСЃС‹Р»РѕС‡РЅС‹С… С‚РёРїРѕРІ: вЂСЃС‹Р»РєР°, РЏСЂРµРґСЃС‚Р°РІР»РµРЅРёРµ, в‚¬РјРЇРЏСЂРµРґРѕРїСЂРµРґРµР»РµРЅРЅС‹С…вЂћР°РЅРЅС‹С… (РґР»СЏ РёРґРµРЅС‚РёС„РёРєР°С†РёРё РїРѕ РЏР‰вЂЎ).
+10.	Р’РЅРµСЃС‚Рё РёР·РјРµРЅРµРЅРёСЏ РІ С„СѓРЅРєС†РёСЋ РїРѕР»СѓС‡РµРЅРёРЇ СЂР°СЃС€РёС„СЂРѕРІРєРё РЏРѕР»СѓС‡РёС‚СЊР‹РїРёСЃР°РЅРёРµРЏСЂРµРґСЃС‚Р°РІР»РµРЅРёРЇР‹Р±СЉРµРєС‚Р°XDTO РјРѕРґСѓР»РЇ ВРёРЅР°Р‹Р±РјРµРЅР°РЉР‚РЏРѕРІС‚в‚¬СЃРї, РІ С„СѓРЅРєС†РёСЋ РїРѕР»СѓС‡РµРЅРёРЇ РґР°РЅРЅС‹С… РЏРѕР»СѓС‡РёС‚СЊвЂћР°РЅРЅС‹Рµв‚¬Рѓ_С’Р°СЃС€РёСЂРЇРµРјС‹Р№, РґР»РЇ РЅРµСЃС‚Р°РЅРґР°СЂС‚РЅС‹С… РєРѕРјР°РЅРґ РІ С„СѓРЅРєС†РёСЋ вЂљС‹РїРѕР»РЅРёС‚СЊР‰РѕРјР°РЅРґСѓВРёРЅС‹Р‹Р±РјРµРЅР°РЉР‚_С’Р°СЃС€РёСЂРЇРµРјС‹Р№ РјРѕРґСѓР»РЇ ВРёРЅР°Р‹Р±РјРµРЅР°РЉР‚РЏРµСЂРµРѕРїСЂРµРґРµР»РЇРµРјС‹Р№.
+11.	РћС‚СЂРµРґР°РєС‚РёСЂРѕРІР°С‚СЊ СЂРѕР»СЊ С‡Рі_Р‘Р°Р·РѕРІС‹РµРџСЂР°РІР°В.
+12.	РЎРѕР·РґР°С‚СЊ РїСЂР°РІРёР»Р° СЂРµРіРёСЃС‚СЂР°С†РёРё
 
 
