Update Порядок обновления подсистемы.md

--- a/Подсистема обслуживания данных (dsm)/Порядок обновления подсистемы.md
+++ b/Подсистема обслуживания данных (dsm)/Порядок обновления подсистемы.md
@@ -1,29 +1,29 @@
-# ЏорЯдок действий при обновлении подсистемы подсистемы
+# РџРѕСЂСЏРґРѕРє РґРµР№СЃС‚РІРёР№ РїСЂРё РѕР±РЅРѕРІР»РµРЅРёРё РїРѕРґСЃРёСЃС‚РµРјС‹ РїРѕРґСЃРёСЃС‚РµРјС‹
 
- Џредставленные порЯдок обновлениЯ подсистемы необходим длЯ исключениЯ ситуаций, когда сообщение старого формата будет обрабатыватьсЯ (а скорее всего оно попадет в Љарантин, несмотрЯ на то, что будет верным длЯ старых алгоритмов) новыми обновленными алгоритмами. Ќаиболее полный порЯдок действий при обновлении (рЯд действий может опускатьсЯ в простых случаЯх обмена или при обновлениЯх, не затрагивающих основные механизмы и формат обмена между базами):
+ РџСЂРµРґСЃС‚Р°РІР»РµРЅРЅС‹Рµ РїРѕСЂРЇРґРѕРє РѕР±РЅРѕРІР»РµРЅРёСЏ РїРѕРґСЃРёСЃС‚РµРјС‹ РЅРµРѕР±С…РѕРґРёРј РґР»СЏ РёСЃРєР»СЋС‡РµРЅРёСЏ СЃРёС‚СѓР°С†РёР№, РєРѕРіРґР° СЃРѕРѕР±С‰РµРЅРёРµ СЃС‚Р°СЂРѕРіРѕ С„РѕСЂРјР°С‚Р° Р±СѓРґРµС‚ РѕР±СЂР°Р±Р°С‚С‹РІР°С‚СЊСЃСЏ (Р° СЃРєРѕСЂРµРµ РІСЃРµРіРѕ РѕРЅРѕ РїРѕРїР°РґРµС‚ РІ РљР°СЂР°РЅС‚РёРЅ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ Р±СѓРґРµС‚ РІРµСЂРЅС‹Рј РґР»СЏ СЃС‚Р°СЂС‹С… Р°Р»РіРѕСЂРёС‚РјРѕРІ) РЅРѕРІС‹РјРё РѕР±РЅРѕРІР»РµРЅРЅС‹РјРё Р°Р»РіРѕСЂРёС‚РјР°РјРё. РќР°РёР±РѕР»РµРµ РїРѕР»РЅС‹Р№ РїРѕСЂРЇРґРѕРє РґРµР№СЃС‚РІРёР№ РїСЂРё РѕР±РЅРѕРІР»РµРЅРёРё (СЂСЏРґ РґРµР№СЃС‚РІРёР№ РјРѕР¶РµС‚ РѕРїСѓСЃРєР°С‚СЊСЃСЏ РІ РїСЂРѕСЃС‚С‹С… СЃР»СѓС‡Р°РЇС… РѕР±РјРµРЅР° РёР»Рё РїСЂРё РѕР±РЅРѕРІР»РµРЅРёСЏС…, РЅРµ Р·Р°С‚СЂР°РіРёРІР°СЋС‰РёС… РѕСЃРЅРѕРІРЅС‹Рµ РјРµС…Р°РЅРёР·РјС‹ Рё С„РѕСЂРјР°С‚ РѕР±РјРµРЅР° РјРµР¶РґСѓ Р±Р°Р·Р°РјРё):
 
-1.	Ћстановить регламентные заданиЯ команд всех обновлЯемых баз, участвующих в обмене.
-2.	“бедитьсЯ в отсутствии зарегистрированных данных к выгрузке.
-3.	‚ыполнить команды выгрузки длЯ всех не отключенных узлов всех планов обмена ины Ћбмена ЊЂ. Џроверить отсутствие зарегистрированных данных к выгрузке.
-4.	Џри необходимости проверить/извлечь/исправить/выгрузить данные Љарантина ‚ыгрузки.
-5.	„лЯ узлов, имеющих команды транспортировки с промежуточным хранением (FTP, FILE, AMQP), выполнить команды загрузки. “бедитьсЯ, что все сообщениЯ из хранилища получены:	
-5.1.	длЯ файловых хранилищ в отсутствии файлов по указанному пути с именами, согласно заданному шаблону.
-5.2.	длЯ брокера AMQP в отсутствии сообщений в очереди (имЯ очереди идентично коду узла) длЯ этого узла. 
+1.	РћСЃС‚Р°РЅРѕРІРёС‚СЊ СЂРµРіР»Р°РјРµРЅС‚РЅС‹Рµ Р·Р°РґР°РЅРёСЏ РєРѕРјР°РЅРґ РІСЃРµС… РѕР±РЅРѕРІР»СЏРµРјС‹С… Р±Р°Р·, СѓС‡Р°СЃС‚РІСѓСЋС‰РёС… РІ РѕР±РјРµРЅРµ.
+2.	РЈР±РµРґРёС‚СЊСЃРЇ РІ РѕС‚СЃСѓС‚СЃС‚РІРёРё Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅРЅС‹С… РґР°РЅРЅС‹С… Рє РІС‹РіСЂСѓР·РєРµ.
+3.	Р’С‹РїРѕР»РЅРёС‚СЊ РєРѕРјР°РЅРґС‹ РІС‹РіСЂСѓР·РєРё РґР»СЏ РІСЃРµС… РЅРµ РѕС‚РєР»СЋС‡РµРЅРЅС‹С… СѓР·Р»РѕРІ РІСЃРµС… РїР»Р°РЅРѕРІ РѕР±РјРµРЅР°. РџСЂРѕРІРµСЂРёС‚СЊ РѕС‚СЃСѓС‚СЃС‚РІРёРµ Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅРЅС‹С… РґР°РЅРЅС‹С… Рє РІС‹РіСЂСѓР·РєРµ.
+4.	РџСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РїСЂРѕРІРµСЂРёС‚СЊ/РёР·РІР»РµС‡СЊ/РёСЃРїСЂР°РІРёС‚СЊ/РІС‹РіСЂСѓР·РёС‚СЊ РґР°РЅРЅС‹Рµ РљР°СЂР°РЅС‚РёРЅР° РІС‹РіСЂСѓР·РєРё.
+5.	Р”Р»СЏ СѓР·Р»РѕРІ, РёРјРµСЋС‰РёС… РєРѕРјР°РЅРґС‹ С‚СЂР°РЅСЃРїРѕСЂС‚РёСЂРѕРІРєРё СЃ РїСЂРѕРјРµР¶СѓС‚РѕС‡РЅС‹Рј С…СЂР°РЅРµРЅРёРµРј (FTP, FILE, AMQP), РІС‹РїРѕР»РЅРёС‚СЊ РєРѕРјР°РЅРґС‹ Р·Р°РіСЂСѓР·РєРё. РЈР±РµРґРёС‚СЊСЃСЏ, С‡С‚Рѕ РІСЃРµ СЃРѕРѕР±С‰РµРЅРёСЏ РёР· С…СЂР°РЅРёР»РёС‰Р° РїРѕР»СѓС‡РµРЅС‹:	
+  	   - РґР»СЏ С„Р°Р№Р»РѕРІС‹С… С…СЂР°РЅРёР»РёС‰ РІ РѕС‚СЃСѓС‚СЃС‚РІРёРё С„Р°Р№Р»РѕРІ РїРѕ СѓРєР°Р·Р°РЅРЅРѕРјСѓ РїСѓС‚Рё СЃ РёРјРµРЅР°РјРё, СЃРѕРіР»Р°СЃРЅРѕ Р·Р°РґР°РЅРЅРѕРјСѓ С€Р°Р±Р»РѕРЅСѓ.
+      - РґР»СЏ Р±СЂРѕРєРµСЂР° AMQP РІ РѕС‚СЃСѓС‚СЃС‚РІРёРё СЃРѕРѕР±С‰РµРЅРёР№ РІ РѕС‡РµСЂРµРґРё (РёРјРЇ РѕС‡РµСЂРµРґРё РёРґРµРЅС‚РёС‡РЅРѕ РєРѕРґСѓ СѓР·Р»Р°) РґР»РЇ СЌС‚РѕРіРѕ СѓР·Р»Р°. 
 
-![Љролик](images/Љролик.png)  
+![РљСЂРѕР»РёРє](images/РљСЂРѕР»РёРє.png)  
 
-6.	“становить настройку ЗЉоличество повторов обработки пакетаИ в значение 1.
-7.	Џри необходимости проверить/извлечь/исправить/обработать данные Љарантина ‡агрузки.
-8.	‚ыполнить команды обработки данных длЯ всех не отключЮнных узлов всех планов обмена ины Ћбмена ЊЂ. 
-9.	“бедитьсЯ в отсутствии зарегистрированных пакетов к обработке. 
+6.	РЈСЃС‚Р°РЅРѕРІРёС‚СЊ РЅР°СЃС‚СЂРѕР№РєСѓ "РљРѕР»РёС‡РµСЃС‚РІРѕ РїРѕРІС‚РѕСЂРѕРІ РѕР±СЂР°Р±РѕС‚РєРё РїР°РєРµС‚Р°" РІ Р·РЅР°С‡РµРЅРёРµ 1.
+7.	РџСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РїСЂРѕРІРµСЂРёС‚СЊ/РёР·РІР»РµС‡СЊ/РёСЃРїСЂР°РІРёС‚СЊ/РѕР±СЂР°Р±РѕС‚Р°С‚СЊ РґР°РЅРЅС‹Рµ Р‰Р°СЂР°РЅС‚РёРЅР° вЂЎР°РіСЂСѓР·РєРё.
+8.	Р’С‹РїРѕР»РЅРёС‚СЊ РєРѕРјР°РЅРґС‹ РѕР±СЂР°Р±РѕС‚РєРё РґР°РЅРЅС‹С… РґР»СЏ РІСЃРµС… РЅРµ РѕС‚РєР»СЋС‡РµРЅРЅС‹С… СѓР·Р»РѕРІ РІСЃРµС… РїР»Р°РЅРѕРІ РѕР±РјРµРЅ. 
+9.	РЈР±РµРґРёС‚СЊСЃСЏ РІ РѕС‚СЃСѓС‚СЃС‚РІРёРё Р·Р°СЂРµРіРёСЃС‚СЂРёСЂРѕРІР°РЅРЅС‹С… РїР°РєРµС‚РѕРІ Рє РѕР±СЂР°Р±РѕС‚РєРµ. 
  
-![‡агрузка правил](images/‡агрузкаЏравил.png)
+![Р—Р°РіСЂСѓР·РєР° РїСЂР°РІРёР»](images/Р—Р°РіСЂСѓР·РєР°РџСЂР°РІРёР».png)
 
-10.	‚ернуть прежнее значение настройки ЗЉоличество повторов обработки пакетаИ. 
-11.	Ћбновить расширение З€нтеграционныеЊодулииныЋбменаЊЂИ длЯ соответствующей конфигурации
-12.	‚ыполнить обновление конфигурации.
-13.	Џри необходимости очистить внешние менеджеры у команд.
-14.	Ћбновить правила регистрации длЯ каждого плана обмена при необходимости
+10.	Р’РµСЂРЅСѓС‚СЊ РїСЂРµР¶РЅРµРµ Р·РЅР°С‡РµРЅРёРµ РЅР°СЃС‚СЂРѕР№РєРё "РљРѕР»РёС‡РµСЃС‚РІРѕ РїРѕРІС‚РѕСЂРѕРІ РѕР±СЂР°Р±РѕС‚РєРё РїР°РєРµС‚Р°". 
+11.	РћР±РЅРѕРІРёС‚СЊ СЂР°СЃС€РёСЂРµРЅРёРµ  РґР»СЏ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РµР№ РєРѕРЅС„РёРіСѓСЂР°С†РёРё
+12.	Р’С‹РїРѕР»РЅРёС‚СЊ РѕР±РЅРѕРІР»РµРЅРёРµ РєРѕРЅС„РёРіСѓСЂР°С†РёРё.
+13.	РџСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё РѕС‡РёСЃС‚РёС‚СЊ РІРЅРµС€РЅРёРµ РјРµРЅРµРґР¶РµСЂС‹ Сѓ РєРѕРјР°РЅРґ.
+14.	РћР±РЅРѕРІРёС‚СЊ РїСЂР°РІРёР»Р° СЂРµРіРёСЃС‚СЂР°С†РёРё РґР»СЏ РєР°Р¶РґРѕРіРѕ РїР»Р°РЅР° РѕР±РјРµРЅР° РїСЂРё РЅРµРѕР±С…РѕРґРёРјРѕСЃС‚Рё
 
 
 
